<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        tools:context=".activities.Sign_in">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="315dp"
            android:layout_height="46dp"
            android:layout_above="@+id/dontHave"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="onClickSignIn"
            android:text="@string/sing_in"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/edit_text_password_login"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_below="@+id/edit_text_email_login"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_shape"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/password"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_text_email_login"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_shape"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/email"
            android:ems="10"
            android:hint="@string/enter_your_email_address"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:onClick="home"
            android:src="@drawable/close" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"

            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:layout_below="@+id/edit_text_password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:onClick="forget"
            android:text="@string/forgot_password"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="79dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:textColor="#1A1824"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dontHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="24dp"
            android:onClick="sighup"
            android:text="don't have account?"
            android:textColor="#1A1824"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="271dp"
            android:layout_height="76dp"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="48dp"
            android:gravity="start"
            android:text="@string/signin"

            android:textColor="#1A1824"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
